--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./assets/css/style.css" />
             <meta charset="UTF-8" />
             <title>Run Buddy</title>
     </head>
     <body>
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">RUN BUDDY</a>
+            </h1>
             <nav>
                 <ul>
                     <li>
