--- a/index.html
+++ b/index.html
@@ -71,41 +71,74 @@
         </section>
   
         <section id="what-we-do" class="intro">
-             <h2 class="section-title primary-border">What We Do</h2>
-             <p>
-                butcher selfies chambray shabby chick gentrify readmade yr Echo Park XOXO Timblr normcare Banksy direct rade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-             </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">What We Do</h2>
+            </div>
+            <div class="flex-row">
+                <p>
+                    butcher selfies chambray shabby chick gentrify readmade yr Echo Park XOXO Timblr normcare Banksy direct rade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>
+            </div>
         </section>
   
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
-            <div>
-                <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-                <p>You're Already here, so why not?</p>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
             </div>
-
-            <div>
-                <img src="./assets/images/step-2.svg" alt="" />
-                <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            <div class="step">
+                <h3>Step 1.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-1.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Fill Out The Form Above</h4>
+                        <p>You're already here, so why not?</p>
+                    </div>
+                </div>
+              </div>
+            <div class="step">
+                <h3>Step 2.</h3>
+                <div class="step-info">
+                  <div class="step-img">
+                     <img src="./assets/images/step-2.svg" alt="" />
+                  </div>  
+                    <div class="step-text">
+                        <h4>Consult with One of Our Trainers</h4>
+                        <p>YAre you here to build muscle, lose weight, or just feel good?</p>
+                    </div> 
+                </div>
             </div>
-
-            <div>
-                <img src="./assets/images/step-3.svg" alt="" />
-                <h3>Step 3: <span>Get Running.</span></h3>
-                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+            <div class="step">
+                <h3>Step 3.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-3.svg" alt="" />
+                    </div>  
+                    <div class="step-text">
+                        <h4>Get Running</h4>
+                        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                    </div> 
+                </div>
             </div>
-
-            <div>
-                <img src="./assets/images/step-4.svg" alt="" />
-                <h3>Step 4: <span>See Results</span></h3>
-                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+            <div class="step">
+                <h3>Step 4.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-4.svg" alt="" />
+                    </div>  
+                    <div class="step-text">
+                        <h4>See Results</h4>
+                        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                    </div> 
+                </div>
             </div>
         </section>
   
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border"> Meet The Trainers</h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border"> Meet The Trainers</h2>
+            </div>    
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -141,7 +174,9 @@
         </section>
 
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border contact-h2">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border contact-h2">Reach Out</h2>
+            </div>
             <div class="contact-info">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3297.6505388951036!2d-88.70570858477953!3d34.25745978055062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88874ea281b4c66d%3A0x8d01a4fbb3841689!2s123%20Main%20St%2C%20Tupelo%2C%20MS%2038801!5e0!3m2!1sen!2sus!4v1601570068287!5m2!1sen!2sus" 
