add flex to reach out

--- a/index.html
+++ b/index.html
@@ -180,14 +180,21 @@
                 <h2 class="section-title secondary-border contact-h2">Reach Out</h2>
             </div>
             <div class="contact-info">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3297.6505388951036!2d-88.70570858477953!3d34.25745978055062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88874ea281b4c66d%3A0x8d01a4fbb3841689!2s123%20Main%20St%2C%20Tupelo%2C%20MS%2038801!5e0!3m2!1sen!2sus!4v1601570068287!5m2!1sen!2sus" 
-                    frameborder="0" 
-                    style="border:0"
-                    allowfullscreen
-                >
-                </iframe>
-            </div>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        123 Main Street <br />
+                        Tupelo, MS <br />
+                        38804<br />
+                        P: 555.RUN.BUDZ (555.786.2839)<br />
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
             <div class="contact-form">
                 <h3>Contact Us</h3>
                 <form>
@@ -201,19 +208,12 @@
                 </form>
             </div>
             <div class="contact-info">
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
-                    <br />
-                    Let us know and we'll be happy to talk to you!
-                </p>
-                <address>
-                    123 Main Street <br />
-                    Tupelo, MS <br />
-                    38804<br />
-                    P: 555.RUN.BUDZ (555.786.2839)<br />
-                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                </address>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3297.6505388951036!2d-88.70570858477953!3d34.25745978055062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88874ea281b4c66d%3A0x8d01a4fbb3841689!2s123%20Main%20St%2C%20Tupelo%2C%20MS%2038801!5e0!3m2!1sen!2sus!4v1601570068287!5m2!1sen!2sus" 
+                    frameborder="0" 
+                    style="border:0"
+                    allowfullscreen>
+                </iframe>
             </div>
         </section>
   
