--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <li>
                         <a href="#reach-out">Reach Out</a>
                     </li>
+                    <li>
+                        <a href="#service-plans">Service Plans</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -176,6 +179,14 @@
             </div>
         </section>
 
+        <section id="service-plans" class="services">
+            <div class="service-grid-item">One</div>
+            <div class="service-grid-item">Two</div>
+            <div class="service-grid-item">Three</div>
+            <div class="service-grid-item">Four</div>
+            <div class="service-grid-item">Five</div>
+            <div class="service-grid-item">Six</div>
+        </section>
         <section id="reach-out" class="contact">
             <div class="flex-row">
                 <h2 class="section-title secondary-border contact-h2">Reach Out</h2>
